test/corpus/django_statements_paired.txt
==================
blocktrans statement
==================

<root>{% blocktrans %}<p>text</p>{% endblocktrans %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (element
          (start_tag
            (name))
          (content
            (char_data))
          (end_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
blocktranslate statement
==================

<root>{% blocktranslate %}<p>text</p>{% endblocktranslate %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (element
          (start_tag
            (name))
          (content
            (char_data))
          (end_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
verbatim statement
==================

<root>{% verbatim %}<p>plain text</p>{% endverbatim %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (element
          (start_tag
            (name))
          (content
            (char_data))
          (end_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
ifchanged statement
==================

<root>{% for x in xs %}{% ifchanged x %}<item/>{% endifchanged %}{% endfor %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (dj_keyword_operator)
        (dj_variable
          (dj_variable_name))
        (dj_paired_statement
          (dj_tag_name)
          (dj_variable
            (dj_variable_name))
          (element
            (self_closing_tag
              (name)))
          (dj_tag_name)
          (dj_end_paired_statement))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
if with boolean
==================

<root>{% if True %}<item/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_boolean)
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
if with number comparison
==================

<root>{% if count == 5 %}<item/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (dj_operator)
        (dj_number)
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
if with and operator
==================

<root>{% if a and b %}<item/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (dj_keyword_operator)
        (dj_variable
          (dj_variable_name))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
for loop with tuple unpacking
==================

<root>{% for k v in pairs %}<item/>{% endfor %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (dj_variable
          (dj_variable_name))
        (dj_keyword_operator)
        (dj_variable
          (dj_variable_name))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))
