test/corpus/mixed.txt
==================
Full document with XML declaration
==================

<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE document SYSTEM "rml.dtd">
<report>
    <title>{{ title }}</title>
</report>

---

(document
  (xml_decl
    (version_num)
    (enc_name))
  (doctype_decl
    (name)
    (external_id
      (system_literal)))
  (element
    (start_tag
      (name))
    (content
      (char_data)
      (element
        (start_tag
          (name))
        (content
          (dj_variable_expr
            (dj_variable
              (dj_variable_name))))
        (end_tag
          (name)))
      (char_data))
    (end_tag
      (name))))

==================
Django in element content alongside text
==================

<p>Hello, {{ user.name }}!</p>

---

(document
  (element
    (start_tag
      (name))
    (content
      (char_data)
      (dj_variable_expr
        (dj_variable
          (dj_variable_name)))
      (char_data))
    (end_tag
      (name))))

==================
Django comment alongside XML comment
==================

<root>{# django comment #}<!-- xml comment --></root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_unpaired_comment)
      (comment))
    (end_tag
      (name))))

==================
Django expression in attribute, text in content
==================

<item class="{{ status }}" id="42">label</item>

---

(document
  (element
    (start_tag
      name: (name)
      (attribute
        name: (name)
        value: (att_value
          (dj_variable_expr
            (dj_variable
              (dj_variable_name)))))
      (attribute
        name: (name)
        value: (att_value)))
    (content
      (char_data))
    (end_tag
      name: (name))))

==================
Deeply nested Django inside XML
==================

<outer><inner>{% if x %}<leaf>{{ x }}</leaf>{% endif %}</inner></outer>

---

(document
  (element
    (start_tag
      (name))
    (content
      (element
        (start_tag
          (name))
        (content
          (dj_paired_statement
            (dj_tag_name)
            (dj_variable
              (dj_variable_name))
            (element
              (start_tag
                (name))
              (content
                (dj_variable_expr
                  (dj_variable
                    (dj_variable_name))))
              (end_tag
                (name)))
            (dj_tag_name)
            (dj_end_paired_statement)))
        (end_tag
          (name))))
    (end_tag
      (name))))

==================
XML entity inside Django context
==================

<root>{% if flag %}&amp;{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (entity_ref
          (name))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
CDATA alongside Django
==================

<root>{{ value }}<![CDATA[<raw>]]></root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (dj_variable
          (dj_variable_name)))
      (cdata_section
        (cdata_start)
        (cdata)))
    (end_tag
      (name))))

==================
Processing instruction alongside Django
==================

<root><?pi content?>{{ value }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (processing_instruction
        (pi_target)
        (pi_content))
      (dj_variable_expr
        (dj_variable
          (dj_variable_name))))
    (end_tag
      (name))))

==================
Django tag boundary crossing: opening tag inside if/else, closing tag outside
==================

<story>{% for x in xs %}{% if cond %}<div class="a">{% else %}<div class="b">{% endif %}<p>text</p></div>{% endfor %}</story>

---

(document
  (element
    (start_tag
      name: (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (dj_keyword_operator)
        (dj_variable
          (dj_variable_name))
        (dj_paired_statement
          (dj_tag_name)
          (dj_variable
            (dj_variable_name))
          (start_tag
            name: (name)
            (attribute
              name: (name)
              value: (att_value)))
          (dj_branch_statement
            (dj_tag_name))
          (start_tag
            name: (name)
            (attribute
              name: (name)
              value: (att_value)))
          (dj_tag_name)
          (dj_end_paired_statement))
        (element
          (start_tag
            name: (name))
          (content
            (char_data))
          (end_tag
            name: (name)))
        (end_tag
          name: (name))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      name: (name))))

==================
Multiple sibling elements as children of paired statement
==================

{% if forloop.counter == my_list|length %}
    <tr height="1cm">
        <td></td>
    </tr>
    <tr height="0.5cm">
        <td leftPadding="0"><para style="normal"><font face="Chromatophore-Medium">Total value</font> in Kilos</para></td>
        <td></td>
        <td></td>
        <td></td>
        <td rightPadding="0"><para style="normal-medium" alignment="RIGHT">{{ total_value|round_decimal_places_down:0|floatformat:"0g" }} kg</para></td>
    </tr>
{% endif %}

---

(document
  (dj_paired_statement
    (dj_tag_name)
    (dj_variable
      (dj_variable_name))
    (dj_operator)
    (dj_variable
      (dj_variable_name)
      (dj_filter
        (dj_filter_name)))
    (char_data)
    (element
      (start_tag
        (name)
        (attribute
          (name)
          (att_value)))
      (content
        (char_data)
        (element
          (start_tag
            (name))
          (end_tag
            (name)))
        (char_data))
      (end_tag
        (name)))
    (char_data)
    (element
      (start_tag
        (name)
        (attribute
          (name)
          (att_value)))
      (content
        (char_data)
        (element
          (start_tag
            (name)
            (attribute
              (name)
              (att_value)))
          (content
            (element
              (start_tag
                (name)
                (attribute
                  (name)
                  (att_value)))
              (content
                (element
                  (start_tag
                    (name)
                    (attribute
                      (name)
                      (att_value)))
                  (content
                    (char_data))
                  (end_tag
                    (name)))
                (char_data))
              (end_tag
                (name))))
          (end_tag
            (name)))
        (char_data)
        (element
          (start_tag
            (name))
          (end_tag
            (name)))
        (char_data)
        (element
          (start_tag
            (name))
          (end_tag
            (name)))
        (char_data)
        (element
          (start_tag
            (name))
          (end_tag
            (name)))
        (char_data)
        (element
          (start_tag
            (name)
            (attribute
              (name)
              (att_value)))
          (content
            (element
              (start_tag
                (name)
                (attribute
                  (name)
                  (att_value))
                (attribute
                  (name)
                  (att_value)))
              (content
                (dj_variable_expr
                  (dj_variable
                    (dj_variable_name)
                    (dj_filter
                      (dj_filter_name)
                      (dj_number))
                    (dj_filter
                      (dj_filter_name)
                      (dj_filter_argument))))
                (char_data))
              (end_tag
                (name))))
          (end_tag
            (name)))
        (char_data))
      (end_tag
        (name)))
    (dj_tag_name)
    (dj_end_paired_statement)))
