test/corpus/xml.txt
==================
XML declaration
==================

<?xml version="1.0"?>
<root/>

---

(document
  (xml_decl
    (version_num))
  (element
    (self_closing_tag
      (name))))

==================
XML declaration with encoding
==================

<?xml version="1.0" encoding="UTF-8"?>
<root/>

---

(document
  (xml_decl
    (version_num)
    (enc_name))
  (element
    (self_closing_tag
      (name))))

==================
XML declaration with standalone
==================

<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<root/>

---

(document
  (xml_decl
    (version_num)
    (enc_name)
    (standalone_value))
  (element
    (self_closing_tag
      (name))))

==================
Empty element
==================

<root/>

---

(document
  (element
    (self_closing_tag
      (name))))

==================
Element with content
==================

<root>hello</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (char_data))
    (end_tag
      (name))))

==================
Nested elements
==================

<root><child/></root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (element
        (self_closing_tag
          (name))))
    (end_tag
      (name))))

==================
Element with attribute
==================

<root attr="value"/>

---

(document
  (element
    (self_closing_tag
      name: (name)
      (attribute
        name: (name)
        value: (att_value)))))

==================
Element with multiple attributes
==================

<root a="1" b="2"/>

---

(document
  (element
    (self_closing_tag
      name: (name)
      (attribute
        name: (name)
        value: (att_value))
      (attribute
        name: (name)
        value: (att_value)))))

==================
Namespaced element
==================

<ns:root xmlns:ns="http://example.com"/>

---

(document
  (element
    (self_closing_tag
      name: (name)
      (attribute
        name: (name)
        value: (att_value)))))

==================
XML comment
==================

<root><!-- a comment --></root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (comment))
    (end_tag
      (name))))

==================
CDATA section
==================

<root><![CDATA[some <raw> data]]></root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (cdata_section
        (cdata_start)
        (cdata)))
    (end_tag
      (name))))

==================
Processing instruction
==================

<root><?php echo "hello"; ?></root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (processing_instruction
        (pi_target)
        (pi_content)))
    (end_tag
      (name))))

==================
Entity references
==================

<root>&amp;&lt;&gt;</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (entity_ref
        (name))
      (entity_ref
        (name))
      (entity_ref
        (name)))
    (end_tag
      (name))))

==================
Character reference
==================

<root>&#65;&#x41;</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (char_ref)
      (char_ref))
    (end_tag
      (name))))

==================
Whitespace between sibling closing tags is preserved as char_data
==================

<para>A word is <b>bold</b> </para>

---

(document
  (element
    (start_tag
      (name))
    (content
      (char_data)
      (element
        (start_tag
          (name))
        (content
          (char_data))
        (end_tag
          (name)))
      (char_data))
    (end_tag
      (name))))

==================
Deeply nested elements
==================

<a><b><c>text</c></b></a>

---

(document
  (element
    (start_tag
      (name))
    (content
      (element
        (start_tag
          (name))
        (content
          (element
            (start_tag
              (name))
            (content
              (char_data))
            (end_tag
              (name))))
        (end_tag
          (name))))
    (end_tag
      (name))))

==================
DOCTYPE with SYSTEM identifier standalone
==================

<!DOCTYPE document SYSTEM "rml.dtd">

---

(document
  (doctype_decl
    name: (name)
    (external_id
      (system_literal))))

==================
DOCTYPE with PUBLIC identifier standalone
==================

<!DOCTYPE document PUBLIC "-//RML//DTD ReportLab//EN" "rml.dtd">

---

(document
  (doctype_decl
    name: (name)
    (external_id
      (pubid_literal)
      (system_literal))))

==================
DOCTYPE in full RML-style document
==================

<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE document SYSTEM "rml.dtd">
<document>
  <section/>
</document>

---

(document
  (xml_decl
    (version_num)
    (enc_name))
  (doctype_decl
    name: (name)
    (external_id
      (system_literal)))
  (element
    (start_tag
      name: (name))
    (content
      (char_data)
      (element
        (self_closing_tag
          name: (name)))
      (char_data))
    (end_tag
      name: (name))))

==================
DOCTYPE without XML declaration
==================

<!DOCTYPE document SYSTEM "rml.dtd">
<root/>

---

(document
  (doctype_decl
    name: (name)
    (external_id
      (system_literal)))
  (element
    (self_closing_tag
      name: (name))))

==================
Comment before DOCTYPE in prolog (no XML declaration)
==================

<!-- preamble -->
<!DOCTYPE document SYSTEM "rml.dtd">
<root/>

---

(document
  (comment)
  (doctype_decl
    name: (name)
    (external_id
      (system_literal)))
  (element
    (self_closing_tag
      name: (name))))

==================
Comment between XML declaration and DOCTYPE
==================

<?xml version="1.0"?>
<!-- preamble -->
<!DOCTYPE document SYSTEM "rml.dtd">
<root/>

---

(document
  (xml_decl
    (version_num))
  (comment)
  (doctype_decl
    name: (name)
    (external_id
      (system_literal)))
  (element
    (self_closing_tag
      name: (name))))

==================
Comment after DOCTYPE before root element
==================

<?xml version="1.0"?>
<!DOCTYPE document SYSTEM "rml.dtd">
<!-- postamble -->
<root/>

---

(document
  (xml_decl
    (version_num))
  (doctype_decl
    name: (name)
    (external_id
      (system_literal)))
  (comment)
  (element
    (self_closing_tag
      name: (name))))

==================
DOCTYPE as literal text in element content is parsed as char_data
==================

<root>The DOCTYPE declaration</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (char_data))
    (end_tag
      (name))))

==================
DOCTYPE inside element content produces an error
==================

<root><!DOCTYPE x></root>

---

(document
  (element
    (start_tag
      name: (name))
    (ERROR
      (UNEXPECTED 'D')
      (dj_tag_name)
      (dj_tag_name))
    (end_tag
      name: (name))))

==================
DOCTYPE inside Django body block produces an error
==================

{% if condition %}<!DOCTYPE x>{% endif %}

---

(document
  (dj_paired_statement
    (dj_tag_name)
    (dj_variable
      (dj_variable_name))
    (ERROR
      (UNEXPECTED 'D')
      (dj_tag_name)
      (dj_tag_name))
    (dj_tag_name)
    (dj_end_paired_statement)))
